done (- transfer to the back)
The register form is done and the information are captured. We still need to pass it to the back in the method "register()" in register.component.ts

--- a/src/main/webapp/i18n/en/register.json
+++ b/src/main/webapp/i18n/en/register.json
@@ -5,6 +5,12 @@
       "button": "Register"
     },
     "messages": {
+      "info": {
+        "studentinformations": {
+          "header": "Student's information",
+          "text": "The following information might be entered or changed later."
+        }
+      },
       "validate": {
         "login": {
           "required": "Your username is required.",
