--- a/src/main/webapp/i18n/fr/register.json
+++ b/src/main/webapp/i18n/fr/register.json
@@ -5,6 +5,12 @@
       "button": "Enregistrement"
     },
     "messages": {
+      "info": {
+        "studentinformations": {
+          "header": "Informations de l'étudiant",
+          "text": "Les informations suivantes pourront être entrées ou changées plus tard."
+        }
+      },
       "validate": {
         "login": {
           "required": "Votre nom d'utilisateur est obligatoire.",
