--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -1,10 +1,7 @@
 {
   "home": {
-    "title": "Welcome, Java Hipster!",
-    "subtitle": "This is your homepage",
-    "logged": {
-      "message": "You are logged in as user \"{{username}}\"."
-    },
+    "title": "Hello there",
+    "subtitle": "This is your login page",
     "question": "If you have any question on JHipster:",
     "link": {
       "homepage": "JHipster homepage",
